# fastapi-vuexjs-ecommerce

backend/: LICENSE  pyproject.toml
backend/app/: database.py  main.py
backend/users/: models.py
