[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tu.tran@indiez.net <tu.tran@indiez.net>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.2"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
uvicorn = "^0.17.4"
gunicorn = "^20.1.0"
alembic = "^1.7.6"
psycopg2 = "^2.9.3"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
